@@ -13,6 +13,7 @@ Bugs fixed
 * #1789: ``:pyobject:`` option of ``literalinclude`` directive includes following
   lines after class definitions
 * #1790: ``literalinclude`` strips empty lines at the head and tail
+* #1913: C++, fix assert bug for enumerators in next-to-global and global scope.
 
 Documentation
 -------------
